fixed searchbody being squashed

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,11 +12,14 @@ body {
 }
 
 #SearchBodyContainer {
-    height: 20vh;
+    
     background-color: white;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    grid-column-start: 1;
+    grid-column-end: 4;
     display: grid;
-    grid-template-rows: 20% 15% 30% 35%;
-    grid-template-columns: 60% auto;
+    grid-template-rows: 20% 20% 20% auto;
 }
 
 h1 {
@@ -53,11 +56,13 @@ h1 {
 
 #inlineHelp {
     height: 100%; 
-    display: flex;
+    display: none;
     background-color: white;
+    position: absolute;
     top: 0px;
     right: 0px;
-    grid-area: 1/2/5/3;
+    height: 400px;
+    width: 400px;
 }
 
 #advancedOptionsButton {
@@ -66,7 +71,6 @@ h1 {
     margin-top: 10px;
     margin-left: auto;
     margin-right: auto;
-    grid-area: 4/1/5/2;
     align-items: start;
     justify-content: start;
 }
